--- a/styles/style.css
+++ b/styles/style.css
@@ -1,69 +1,68 @@
+/* https://colourco.de/freebuild/cc8400-ffa500-ffb733-0048cc-005aff-337bff-0f0f0f-f0f0f0 */
 body{
     margin: 0 0;
-    --orangegradient: linear-gradient(-45deg,rgb(255,130,0),rgb(255,200,0));
+    --orangegradient: linear-gradient(90deg,#CC8400,#FFA500,#FFB733);
     background-color: rgb(240,240,240)
+    min-height: 1500vh;
 }
+
 html {
-    font-size: 10px;
     font-family: 'Montserrat', sans-serif;
-}
-
-h2{
-    font-size: 60px;
-    text-align: center;
-    margin: 0;
-    padding: 20px 0;
-    color: rgb(255,165,0);
-}
-
-p, li {
-    font-size: 16px;
-    line-height: 2;
-    letter-spacing: 1px;
-}
-
-#user {
-    font-size:16px;
-    display: block;
-    margin: 0 auto;
-}
-
-h6 {
-    font-size: 20px;
-    letter-spacing: 1.25;
-    text-align: center;
 }
 
 #eye {
     position: absolute;
-    left: 20px;
-    height: 100%;
+    top: 5px;
+    left: 15px;
+    
 }
 
 header{
-    position: relative;
-    left:0;
-    top: -32px;
-    background: var(--orangegradient);
-    border-radius: 0px 0px 5px 5px;  
-    box-shadow: 20px 5px 30px rgba(255,165,0,0.5);
+    
+    
 }
 
 .pagebody {
-    position: relative;
-    top:-53px;
-    padding-left: 20px;
-    padding-right: 20px;
     
 }
 
 .title {
-    padding:18px 18px 18px 200px;
-    font-size: 40px;
-    line-height: 2;
-    letter-spacing: 1px;
+    font-size: 60px;
+    color: #F0F0F0;
+    text-shadow: -2px 0 #0f0f0f, 0 2px #0f0f0f, 2px 0 #0f0f0f, 0 -2px #0f0f0f;
 }
 
 nav li{
     display: inline;
+    margin-right: 18px;
+    margin-left: 28px;
+}
+
+nav ul{
+    position: relative;
+    left: 108px;
+    
+}
+
+#head{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    background: var(--orangegradient);
+    border-radius: 0px 0px 5px 5px;  
+    box-shadow: 20px 5px 30px #FFA500;
+}
+
+p{
+    font-size: 60px
+}
+
+#home{
+    position:relative;
+    top: 140px;
+    display:blocK;
+    margin-left: auto;
+    margin-right: auto;
+
 }
